uprava do jednotneho stylu

--- a/index.html
+++ b/index.html
@@ -54,37 +54,41 @@
   </header>
 </div>
 
-<div class="wrapper row2">
+<div class="hoc clear hero-container">
+  <div class="one_half first hero-image">
+    <img src="images/rodinne.jpg" />
+  </div>
+  <div class="one_half hero-text ">
+    <p>Ideální pro rodiny s dětmi
+      <br><br>Lyžujte a nestujte ve frontách
+      <br><br>Dětský vlek i pás
+      <br><br>Umělé zasněžování
+      <br><br>
+    <div class="hero-cta">
+      Přijeďte si k nám zalyžovat! <br>
+    </div>
 
-</div>
-
-<div class="wrapper bgded overlay" style="background-image:url('images/rodinne.jpg'); background-position: center;">
-  <div id="pageintro" class="hoc clear"> 
-    <!-- ################################################################################################ -->
-    <article>
-      <p>Rodinné lyžování a ubytování v Jizerských horách</p>
-      <h3 class="heading">Ski Lucifer - Josefův Důl</h3>
-    </article>
-    <!-- ################################################################################################ -->
+    </p>
   </div>
 </div>
+
 <div class="wrapper row3">
   <main class="hoc container clear"> 
     <!-- main body -->
     <!-- ################################################################################################ -->
     <section id="introblocks" >
-      <div class="one_half first btmspace-50">
-        <h6 class="heading">Lyžování v Jizerských horách pro celou rodinu</h6><br>
+      <div class="one_half first">
+        <h6 class="heading">Lyžování v Jizerských horách pro celou rodinu</h6>
         <p>Najdete nás na samotném kraji Josefova Dolu uprostřed Jizerských hor. Jsme malý rodinný lyžařský areál. </p>
-        <br>
         <p>Zalyžuje si u nás celá rodina. Děti začínající s lyžováním mohou využívat <strong>lyžařský pás</strong>, případně vlek u hotelu Peklo(100m).
           Dále máme pro děti <strong>Malý vlek</strong> (210m) s ideálním sklonem pro výuku lyžování.
           Zkušenější lyžaři mohou prověřit své schopnosti na <strong>Velkém vleku</strong> (500m). Sjezdovka je pestrá, obsahuje pozvolné
           i prudší úseky a nově mohou milovníci adrenalinu využít i dva skoky. </p>
+
       </div>
-      <div class="one_half">
+      <div class="one_half btmspace-30">
       <h2>Vleky Ski Lucifer</h2>
-      <table id="souhrn-vleku" border="1" cellspacing="0" cellpadding="0" class="btmspace-80">
+      <table id="souhrn-vleku" border="1" cellspacing="0" cellpadding="0" class="btmspace-30">
         <thead>
         <tr>
           <th>
@@ -115,6 +119,12 @@
         </tr>
 
       </table>
+        <h6 class="heading">Kontaktuje nás</h6>
+
+        <div class="hero-cta hero-text" style="font-size: 18px; letter-spacing: normal; background-color: #373737">
+          Jste skupina a chcete slevu? <br>Jste skupina a chcete zajistit dopravu k vleku?<br> Máte jiný dotaz? <br><br>
+          Pište na <strong>ski_moravek@volny.cz</strong>
+        </div>
       </div>
     <!-- ################################################################################################ -->
       <div class="btmspace-50">
