--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       gtag('config', 'UA-128548614-1');
   </script>
-<title>Ski Lucifer - Lyžování Jizerské hory</title>
+<title>Ski Lucifer - Ski areál Jizerské hory</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="last-modified" content="Wed, 12 Dec 2018 09:00:46 GMT" />
@@ -56,19 +56,17 @@
 
 <div class="hoc clear hero-container">
   <div class="one_half first hero-image overlay" style="background-image: url('images/rodinne.jpg');">
-<!--
-    <div style="height: 400px; width: 150px; background-image: linear-gradient(to left, rgba(55,55,55,0) , #373737); float: left"></div>
--->
     <div style="height: 400px; width: 25px; background-image: linear-gradient(to right, rgba(55,55,55,0) , #373737); float: right;"></div>
   </div>
   <div class="one_half hero-text ">
-    <p>Ideální pro rodiny s dětmi
-      <br><br>Lyžujte a nestujte ve frontách
-      <br><br>Dětský vlek i pás
-      <br><br>Umělé zasněžování
-      <br><br>
+    <ul>
+      <li>Ideální pro rodiny s dětmi</li>
+      <li>Lyžujte a nestujte ve frontách</li>
+      <li>Dětský vlek i pás</li>
+      <li>Umělé zasněžování</li>
+    </ul>
     <div class="hero-cta">
-      Přijeďte si k nám zalyžovat! <br>
+      Přijeďte si k nám zalyžovat!
     </div>
 
     </p>
@@ -81,8 +79,8 @@
     <!-- ################################################################################################ -->
     <section id="introblocks" >
       <div class="one_half first">
-        <h6 class="heading">Lyžování v Jizerských horách pro celou rodinu</h6>
-        <p>Najdete nás na samotném kraji Josefova Dolu uprostřed Jizerských hor. Jsme malý rodinný lyžařský areál. </p>
+        <h2 class="heading">Ski areál v Jizerských horách vhodný pro celou rodinu</h2>
+        <p>Najdete nás na samotném kraji Josefova Dolu uprostřed Jizerských hor. Jsme malý rodinný ski areál. </p>
         <p>Zalyžuje si u nás celá rodina. Děti začínající s lyžováním mohou využívat <strong>lyžařský pás</strong>, případně vlek u hotelu Peklo(100m).
           Dále máme pro děti <strong>Malý vlek</strong> (210m) s ideálním sklonem pro výuku lyžování.
           Zkušenější lyžaři mohou prověřit své schopnosti na <strong>Velkém vleku</strong> (500m). Sjezdovka je pestrá, obsahuje pozvolné
@@ -122,7 +120,7 @@
         </tr>
 
       </table>
-        <h6 class="heading">Kontaktuje nás</h6>
+        <h2 class="heading">Kontaktuje nás</h2>
 
         <div class="hero-cta hero-text" style="font-size: 18px; letter-spacing: normal; background-color: #373737">
           Jste skupina a chcete slevu? <br>Jste skupina a chcete zajistit dopravu k vleku?<br> Máte jiný dotaz? <br><br>
@@ -134,14 +132,14 @@
         <ul class="nospace group">
           <li class="one_third first">
             <article><a href="#"><i class="far fa-money-bill-alt"></i></a>
-              <h6 class="heading">Ceník</h6>
+              <h3 class="heading">Ceník</h3>
               <p>Celodenní lyžování na Velkém Luciferu za 340,-Kč/den. Na Malém Luciferu za 190,-Kč/den.</p>
               <footer><a class="btn" href="#cenik">Kompletní ceník</a></footer>
             </article>
           </li>
           <li class="one_third">
             <article><a href="#"><i class="fas fa-book"></i></a>
-              <h6 class="heading">Lyžařská škola</h6>
+              <h3 class="heading">Lyžařská škola</h3>
               <p>Dokážeme naučit lyžovat malé i velké. Díky vleku Malý Lucifer a mírnému svahu,
                 se můžete v klidu naučit lyžovat.</p>
               <p id="pujcovna-kontakt" style="display: none;">
@@ -156,7 +154,7 @@
 
           <li class="one_third">
             <article><a href="#"><i class="fas fa-warehouse"></i></a>
-              <h6 class="heading">Půjčovna lyžařského vybavení</h6>
+              <h3 class="heading">Půjčovna lyžařského vybavení</h3>
               <p>Půjčujeme lyže, snowboard, běžky včetně veškerého příslušenství</p>
               <footer><a class="btn" href="#">Ceník</a></footer>
             </article>
@@ -169,7 +167,7 @@
         <li class="one_half first">
           <article>
             <img src="images/niky.jpg" alt="Penzion Niky - ubytování Josefův Důl">
-            <h6 class="heading">Penzion Niky</h6>
+            <h3 class="heading">Penzion Niky</h3>
             <p>Ubytování v apartmánech, k dispozici bazén a sauna. Od 280,-Kč/os.</p>
             <footer><a class="btn" href="ubytovani/penzion-niky.html">Web Penzionu Niky</a></footer>
           </article>
@@ -178,7 +176,7 @@
         <li class="one_half">
           <article>
             <img src="images/roubenka.jpg" alt="Roubenka u vleku - ubytování u sjezdovky">
-            <h6 class="heading">Roubenka u vleku</h6>
+            <h3 class="heading">Roubenka u vleku</h3>
             <p>Ubytování přímo u sjezdovky za 3000,-Kč/den. Až 13 lůžek.</p>
             <footer><a class="btn" href="ubytovani/roubenka.html">Web Roubenky</a></footer>
           </article>
@@ -187,40 +185,12 @@
 
     </section>
 
-    <!--<section>
-      <div class="sectiontitle">
-        <h6 class="heading">Fotogalerie</h6>
-      </div>
-      <ul class="nospace group overview">
-        <li class="one_third">
-          <figure><a href="#"><img src="images/hospudka.jpg" alt=""></a>
-            <figcaption>
-              <h6 class="heading">Hospůdka u vleku</h6>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="one_third">
-          <figure><a href="#"><img src="images/niky.jpg" alt=""></a>
-            <figcaption>
-              <h6 class="heading">Penzion Niky</h6>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="one_third">
-          <figure><a href="#"><img src="images/roubenka.jpg" alt=""></a>
-            <figcaption>
-              <h6 class="heading">Roubenka u vleku</h6>
-            </figcaption>
-          </figure>
-        </li>
-      </ul>
-    </section>-->
     <hr class="btmspace-80">
     <section id="cenik">
       <div class="sectiontitle">
-        <h6 class="heading">Ceník</h6>
+        <h2 class="heading">Ceník</h2>
       </div>
-      <h6>Malý a Velký Lucifer</h6>
+      <h3>Malý a Velký Lucifer</h3>
       <table id="velkyvlek-cenik" border="1" cellspacing="0" cellpadding="0" class="btmspace-50">
         <thead>
         <tr>
@@ -411,7 +381,7 @@
         </td>
       </tr></tbody></table>
 
-       <h6>Peklo</h6>
+       <h3>Peklo</h3>
       <table id="peklo-cenik" border="1" cellspacing="0" cellpadding="0"  class="btmspace-50"><tbody>
       <thead>
       <tr><th>
@@ -463,7 +433,7 @@
         </td>
       </tr></tbody></table>
 
-      <h6>Bodovky</h6>
+      <h3>Bodovky</h3>
       <table border="1" cellspacing="0" cellpadding="0"  class="btmspace-50"><tbody>
       <thead>
       <tr><th>
@@ -503,10 +473,10 @@
 
       <section id="pujcovna" class="btmspace-50">
         <div class="sectiontitle">
-          <h6 class="heading">Půjčovna lyžařského vybavení</h6>
+          <h2 class="heading">Půjčovna lyžařského vybavení</h2>
           <p>Půjčujeme lyže, snowboard, běžky včetně veškerého příslušenství</p>
         </div>
-        <h6 class="heading">Ceník půjčovného</h6>
+        <h3 class="heading">Ceník půjčovného</h3>
       <table id="pujcovna-cenik" style="width:100%" border="1" cellspacing="0" cellpadding="3"><tbody>
       <thead>
       <tr>
@@ -571,7 +541,7 @@
     <hr class="btmspace-80">
     <section id="webkamera" class="btmspace-80">
       <div class="sectiontitle">
-        <h6 class="heading">Webkamera</h6>
+        <h2 class="heading">Webkamera</h2>
       </div>
       <div class="wrapper">
         <link type="text/css" href="https://www.webcamlive.cz/stream/videojs5/video-js.min.css" rel="stylesheet" property='stylesheet' />
@@ -592,7 +562,7 @@
     <hr class="btmspace-80">
     <section id="kudy-k-nam">
       <div class="sectiontitle">
-        <h6 class="heading">Kudy k nám</h6>
+        <h2 class="heading">Kudy k nám</h2>
       </div>
       <div class="wrapper" style="text-align: center">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2522.249266921223!2d15.21121871597258!3d50.789488870757715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470eccbef803fe5d%3A0x1680351cc7628f1a!2sSki+Lucifer!5e0!3m2!1scs!2scz!4v1536955521806" width="800" height="650" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -608,7 +578,7 @@
 <div class="wrapper coloured">
   <article class="hoc cta clear"> 
     <!-- ################################################################################################ -->
-    <h6 class="three_quarter first">Těšíme se na vaši návštěvu - Ski Lucifer tým</h6>
+    <h2 class="three_quarter first">Těšíme se na vaši návštěvu - Ski Lucifer tým</h2>
     <!-- ################################################################################################ -->
   </article>
 </div>
