--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <title>Ski Lucifer - Ski areál Jizerské hory</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Wed, 26 Dec 2018 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Sun, 30 Dec 2018 09:00:46 GMT" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
   <link type="text/css" href="https://www.webcamlive.cz/stream/videojs5/video-js.min.css" rel="stylesheet" property="stylesheet">
@@ -39,7 +39,7 @@
             <li><a href="#pujcovna-cenik">Půjčovna</a></li>
           </ul>
         </li>
-        <li><a href="#">Webkamera</a></li>
+        <li><a href="#webkamera">Webkamera</a></li>
         <li><a class="drop" href="#">Ubytování</a>
           <ul>
             <li><a href="ubytovani/roubenka.html">Roubenka</a></li>
