--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -14,7 +14,7 @@
 <title>Penzion Niky - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Fri, 28 Dec 2018 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Tue, 22 Jan 2019 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="../ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
 
@@ -143,12 +143,12 @@
         </thead>
         <tr>
           <td>dospělý</td>
-          <td>265 Kč / noc</td>
+          <td>315 Kč / noc</td>
           <td>335 Kč / noc</td>
         </tr>
         <tr>
           <td>dítě do 15 let</td>
-          <td>220 Kč / noc</td>
+          <td>250 Kč / noc</td>
           <td>275 Kč / noc</td>
         </tr>
         <tr>
@@ -158,7 +158,7 @@
         </tr>
         <tr>
           <td>minimální cena za pokoj, rozumí se za 1 noc při vícedenním pobytu</td>
-          <td>530 Kč</td>
+          <td>600 Kč</td>
           <td>640 Kč</td>
         </tr>
         <tr>
@@ -167,7 +167,7 @@
       </table>
       <small class="text-right">Ceny ubytování nezahrnují poplatek místnímu úřadu ve výši 10 nebo 15 Kč na
         dospělou osobu a den, cena podle
-        sezóny. Cena je vyšší v době Vánoc, přes Nový rok a během jarních prázdnin.
+        sezóny. Cena může být vyšší v době Vánoc, přes Nový rok a během jarních prázdnin.
       </small>
       </section>
       <hr class="btmspace-50">
