--- a/ubytovani/roubenka.html
+++ b/ubytovani/roubenka.html
@@ -14,7 +14,7 @@
 <title>Roubenka u vleku - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Fri, 28 Dec 2018 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Fri, 01 Feb 2018 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="../ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
 
@@ -227,8 +227,8 @@
             468 44 okr. Jablonec nad Nisou
           </address>
         </li>
-        <li><i class="fas fa-phone"></i> +420 602 879 598</li>
-        <li><i class="far fa-envelope"></i> info@skilucifer.cz</li>
+        <li><i class="fas fa-phone"></i> +420 777 847 936</li>
+        <li><i class="far fa-envelope"></i> ski_moravek@volny.cz</li>
       </ul>
       <ul class="faico clear">
         <li><a class="faicon-facebook" href="#"><i class="fab fa-facebook"></i></a></li>
