--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <title>Ski Lucifer - Ski areál Jizerské hory</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Mon, 21 Jan 2019 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Thu, 28 Feb 2019 09:00:46 GMT" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
   <link type="text/css" href="https://www.webcamlive.cz/stream/videojs5/video-js.min.css" rel="stylesheet" property="stylesheet">
@@ -117,7 +117,7 @@
         </tr>
 
       </table>
-        <h2 class="heading">Kontaktuje nás</h2>
+        <h2 class="heading">Kontaktujte nás</h2>
 
         <div>
           <table>
