--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -14,7 +14,7 @@
 <title>Penzion Niky - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Fri, 01 Feb 2019 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Wed, 20 Mar 2019 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="../ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
 
@@ -51,7 +51,7 @@
   <div class="one_half hero-text ">
     <p>Krásná příroda Jizerských hor
       <br><br>Apartmány vhodné pro rodiny
-      <br><br>Dětské hřiště a bazén
+      <br><br>Dětské hřiště
       <br><br>Nádherné výhledy
       <br>
       <div class="hero-cta">
