--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -14,7 +14,7 @@
 <title>Penzion Niky - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Wed, 20 Mar 2019 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Wed, 05 Jun 2019 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="../ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
 
@@ -155,6 +155,11 @@
           <td>dítě do 3 let</td>
           <td>zdarma</td>
           <td>zdarma</td>
+        </tr>
+          <tr>
+          <td>pes</td>
+          <td>100 / noc</td>
+          <td>100 / noc</td>
         </tr>
         <tr>
           <td>minimální cena za pokoj, rozumí se za 1 noc při vícedenním pobytu</td>
