--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <title>Ski Lucifer - Ski areál Jizerské hory</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Sat, 10 Aug 2019 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Wed, 11 Dec 2019 09:00:46 GMT" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
   <link type="text/css" href="https://www.webcamlive.cz/stream/videojs5/video-js.min.css" rel="stylesheet" property="stylesheet">
@@ -139,13 +139,13 @@
         </tr>
         </thead>
         <tr>
-          <td>Velký Lucifer</td><td>500m</td><td>Ano</td><td class="highligted-cell">Ano</td>
+          <td>Velký Lucifer</td><td>500m</td><td>Ano</td><td class="highligted-cell">Ne</td>
         </tr>
         <tr>
-          <td>Malý Lucifer</td><td>210m</td><td>Ano</td><td class="highligted-cell">Ano</td>
+          <td>Malý Lucifer</td><td>210m</td><td>Ano</td><td class="highligted-cell">Ne</td>
         </tr>
         <tr>
-          <td>Peklo</td><td>100m</td><td>Ano</td><td class="highligted-cell">Ano</td>
+          <td>Peklo</td><td>100m</td><td>Ano</td><td class="highligted-cell">Ne</td>
         </tr>
         <tr><td colspan="4">Otevírací doba: 9:00 - 16:00</td></tr>
 
