--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <title>Ski Lucifer - Ski areál Jizerské hory</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Mon, 06 Jan 2019 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Sat, 18 Jan 2019 09:00:46 GMT" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
   <link type="text/css" href="https://www.webcamlive.cz/stream/videojs5/video-js.min.css" rel="stylesheet" property="stylesheet">
@@ -226,7 +226,7 @@
         <h2 class="heading">Ceník</h2>
       </div>
       <h3>Malý a Velký Lucifer</h3>
-      <table id="velkyvlek-cenik" border="1" cellspacing="0" cellpadding="0" class="btmspace-50">
+      <table id="velkyvlek-cenik" border="1" cellspacing="0" cellpadding="0">
         <thead>
         <tr>
         <th>
@@ -415,7 +415,7 @@
           <p>3800,-Kč</p>
         </td>
       </tr></tbody></table>
-
+        <p class="btmspace-50" style="font-size: 0.8em;">Pozn. permanetka na Velkého Lucifera platí i na Malého Lucifera</p>
        <h3>Peklo</h3>
       <table id="peklo-cenik" border="1" cellspacing="0" cellpadding="0"  class="btmspace-50"><tbody>
       <thead>
