--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <title>Ski Lucifer - Ski areál Jizerské hory</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Sat, 18 Jan 2019 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Tue, 21 Jan 2019 09:00:46 GMT" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
   <link type="text/css" href="https://www.webcamlive.cz/stream/videojs5/video-js.min.css" rel="stylesheet" property="stylesheet">
@@ -155,6 +155,7 @@
 
         <div>
           <table>
+            <tr><td>Email</td><td>ski_moravek@volny.cz</td></tr>
             <tr><td>Ski areál</td><td><a href="tel:+420 602 879 598"> 602 879 598</a></td></tr>
             <tr><td>Půjčovna</td><td><a href="tel:+420 737 506 594"> 737 506 594</a></td></tr>
             <tr><td>Lyžařská škola</td><td><a href="tel:+420 603 487 060"> 603 487 060</a></td></tr>
