zmena ceny mistniho poplatku a dodatek o dreve

--- a/ubytovani/roubenka.html
+++ b/ubytovani/roubenka.html
@@ -14,7 +14,7 @@
 <title>Roubenka u vleku - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Wed, 05 Jun 2018 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Sat, 08 Feb 2020 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="../ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
 
@@ -130,7 +130,7 @@
           </tr>
 
           <tr>
-            <td colspan="3"><p>K ceně pronájmu účtujeme spotřebovanou elektrickou energii</p>
+            <td colspan="3"><p>Primární zdroj tepla jsou elektrické přímotopy. Můžete ale využít i přítop dřevem. K ceně pronájmu účtujeme elektrickou energii a dřevo dle spotřeby.</p>
 
               <p>Úklid, nebude-li proveden před odjezdem, je zpoplatněn 500 Kč.</p>
 
@@ -143,8 +143,7 @@
               Třetí pes 300 Kč / noc</td>
           </tr>
         </table>
-        <small class="text-right">Ceny ubytování nezahrnují poplatek místnímu úřadu ve výši 10 nebo 15 Kč na dospělou osobu a den, cena podle
-          sezóny. Cena je vyšší v době Vánoc, přes Nový rok a během jarních prázdnin.
+        <small class="text-right">Ceny ubytování nezahrnují poplatek místnímu úřadu ve výši 20 Kč na dospělou osobu a den. Cena ubytování může být vyšší v době Vánoc, přes Nový rok a během jarních prázdnin.
         </small>
       </section>
       <hr class="btmspace-50">
