--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -14,7 +14,7 @@
 <title>Penzion Niky - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Wed, 05 Jun 2019 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Sat, 08 Feb 2020 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="../ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
 
@@ -170,9 +170,8 @@
           <td id="mapa">v případě 1 noci účtujeme přirážku 30% na osobu</td>
         </tr>
       </table>
-      <small class="text-right">Ceny ubytování nezahrnují poplatek místnímu úřadu ve výši 10 nebo 15 Kč na
-        dospělou osobu a den, cena podle
-        sezóny. Cena může být vyšší v době Vánoc, přes Nový rok a během jarních prázdnin.
+      <small class="text-right">Ceny ubytování nezahrnují poplatek místnímu úřadu ve výši 20 Kč na
+        dospělou osobu a den. Cena ubytování se může lišit v době Vánoc, přes Nový rok a během jarních prázdnin.
       </small>
       </section>
       <hr class="btmspace-50">
