zmena ceny a provozu vleku

--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
         </tr>
         </thead>
         <tr>
-          <td>Velký Lucifer</td><td>500m</td><td>Ano</td><td class="green-cell">Ano</td>
+          <td>Velký Lucifer</td><td>500m</td><td>Ano</td><td class="red-cell">Ne</td>
         </tr>
         <tr>
-          <td>Malý Lucifer</td><td>210m</td><td>Ano</td><td class="green-cell">Ano</td>
+          <td>Malý Lucifer</td><td>210m</td><td>Ano</td><td class="red-cell">Ne</td>
         </tr>
         <tr>
-          <td>Peklo</td><td>100m</td><td>Ano</td><td class="green-cell">Ano</td>
+          <td>Peklo</td><td>100m</td><td>Ano</td><td class="red-cell">Ne</td>
         </tr>
         <tr><td colspan="4">Otevírací doba: 9:00 - 16:00</td></tr>
 
