zmena cen roubenky

--- a/ubytovani/roubenka.html
+++ b/ubytovani/roubenka.html
@@ -114,14 +114,14 @@
           <th>V zimě</th>
           </thead>
           <tr>
-            <td>1 noc</td>
+            <td>1 noc při délce pobytu 2-3 nocí</td>
             <td>2 700 Kč</td>
             <td>3 200 Kč</td>
           </tr>
           <tr>
-            <td>1 noc (delší pobyt)</td>
-            <td>2 000 Kč</td>
-            <td>2 750 Kč</td>
+            <td>1 noc při délce pobytu 4-6 nocí</td>
+            <td>2 300 Kč</td>
+            <td>2 900 Kč</td>
           </tr>
           <tr>
             <td>1 týden / 7 nocí</td>
@@ -130,17 +130,13 @@
           </tr>
 
           <tr>
-            <td colspan="3"><p>Primární zdroj tepla jsou elektrické přímotopy. Můžete ale využít i přítop dřevem. K ceně pronájmu účtujeme elektrickou energii a dřevo dle spotřeby.</p>
+            <td colspan="3"><p style="line-height: 1.8;">Primární zdroj tepla jsou elektrické přímotopy. Můžete ale využít i přítop dřevem. K ceně pronájmu účtujeme elektrickou energii a dřevo dle spotřeby. Úklid, nebude-li proveden před odjezdem, je zpoplatněn 500 Kč. Domácí mazlíčci u nás mohou bydlet také, cena se připočítává k ceně pronájmu</p>
 
-              <p>Úklid, nebude-li proveden před odjezdem, je zpoplatněn 500 Kč.</p>
+              <p>Jeden pes 100 Kč / noc</p>
 
-              <p>Domácí mazlíčci u nás mohou bydlet také, cena se připočítává k ceně pronájmu</p>
+              <p>Druhý pes 150 Kč / noc</p>
 
-              Jeden pes 100 Kč / noc
-
-              Druhý pes 150 Kč / noc
-
-              Třetí pes 300 Kč / noc</td>
+              <p>Třetí pes 300 Kč / noc</p>
           </tr>
         </table>
         <small class="text-right">Ceny ubytování nezahrnují poplatek místnímu úřadu ve výši 20 Kč na dospělou osobu a den. Cena ubytování může být vyšší v době Vánoc, přes Nový rok a během jarních prázdnin.
