zmena ceny niky

--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -14,7 +14,7 @@
 <title>Penzion Niky - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Sat, 08 Feb 2020 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Thu, 28 Oct 2021 09:00:46 GMT" />
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="../ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
 
@@ -120,13 +120,26 @@
       <p>
         V létě je k dispozici</p>
       <ul>
-        <li>zahradní nábytek</li>
-        <li>pískoviště</li>
+        <li>pískoviště, houpačky, skluzavka</li>
+        <li>venkovní sezení</li>
+        <li>trampolína</li>
         <li>přírodní ohniště</li>
-        <li>krytý bazén</li>
-        <li>posilovna</li>
       </ul>
       </section>
+    <hr class="btmspace-50">
+
+    <section id="cenik" class="btmspace-50">
+      <sectiontitle>
+        <h6>Důležité informace k pobytu</h6>
+        <ul>
+          <li>Ubytovat se je možné po 14.hodině a v den odjezdu prosíme o uvolnění pokoje do 10.hodiny.</li>
+          <li>Platba na místě v hotovosti</li>
+          <li>Při příjezdu prosíme kontaktovat pana Morávka (602879598)</li>
+        </ul>
+
+      </sectiontitle>
+    </section>
+
 
       <hr class="btmspace-50">
 
@@ -138,17 +151,21 @@
       <table>
         <thead>
         <th></th>
-        <th>V létě</th>
-        <th>V zimě</th>
+        <th>Hlavní sezóna <br> <span>(prosinec, leden, únor, březen, červenec, srpen)</span>
+        </th>
+        <th>Vedlejší sezóna <br> <span>(duben, květen, červen, září, říjen, listopad)</span>
+
+        </th>
+
         </thead>
         <tr>
           <td>dospělý</td>
-          <td>330 Kč / noc</td>
-          <td>350 Kč / noc</td>
+          <td>440 Kč / noc</td>
+          <td>380 Kč / noc</td>
         </tr>
         <tr>
           <td>dítě do 15 let</td>
-          <td>275 Kč / noc</td>
+          <td>350 Kč / noc</td>
           <td>300 Kč / noc</td>
         </tr>
         <tr>
@@ -163,8 +180,8 @@
         </tr>
         <tr>
           <td>minimální cena za pokoj, rozumí se za 1 noc při vícedenním pobytu</td>
-          <td>600 Kč</td>
-          <td>640 Kč</td>
+          <td>790 Kč</td>
+          <td>680 Kč</td>
         </tr>
         <tr>
           <td id="mapa">v případě 1 noci účtujeme přirážku 30% na osobu</td>
