--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <title>Ski Lucifer - Ski areál Jizerské hory</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="last-modified" content="Mon, 11 Jan 2021 09:00:46 GMT" />
+  <meta http-equiv="last-modified" content="Sat, 01 Jan 2022 09:00:46 GMT" />
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link href="ubytovani/css/main.css" rel="stylesheet" type="text/css" media="all">
   <link type="text/css" href="https://www.webcamlive.cz/stream/videojs5/video-js.min.css" rel="stylesheet" property="stylesheet">
@@ -261,10 +261,10 @@
           <p>1 jednotlivá jízda</p>
         </td>
           <td>
-            <p>25,- Kč</p>
+            <p>30,- Kč</p>
           </td>
           <td>
-            <p>25,- Kč</p>
+            <p>30,- Kč</p>
           </td>
           <td class="center">
             <p>-</p>
@@ -276,10 +276,10 @@
         <p>1 hodina</p>
       </td>
         <td>
-          <p>120,- Kč</p>
+          <p>150,- Kč</p>
         </td>
         <td>
-          <p>120,- Kč</p>
+          <p>130,- Kč</p>
         </td>
         <td class="center">
           <p>-</p>
@@ -291,7 +291,7 @@
         <p>3 hodiny</p>
       </td>
         <td>
-          <p>220,- Kč</p>
+          <p>260,- Kč</p>
         </td>
         <td>
           <p>220,- Kč</p>
@@ -307,31 +307,31 @@
         <p>Celodenní permanentka</p>
       </td>
         <td >
+          <p>350,-Kč</p>
+        </td>
+        <td >
           <p>330,-Kč</p>
         </td>
-        <td >
-          <p>280,-Kč</p>
-        </td>
           <td>
-          <p>190,-Kč</p>
+          <p>220,-Kč</p>
         </td>
         <td >
-          <p>170,-Kč</p>
+          <p>200,-Kč</p>
         </td>
       </tr><tr><td  class="first">
         <p>Zkrácená celodenní permanentka od 11 hod</p>
       </td>
         <td >
-          <p>270,-Kč</p>
+          <p>300,-Kč</p>
         </td>
         <td >
-          <p>230,-Kč</p>
+          <p>260,-Kč</p>
         </td>
         <td >
-          <p>160,-Kč</p>
+          <p>200,-Kč</p>
         </td>
         <td >
-          <p>140,-Kč</p>
+          <p>180,-Kč</p>
         </td>
       </tr><tr><td class="first">
         <p>Dopolední permanentka do 12.30</p>
@@ -352,46 +352,46 @@
         <p>Odpolední permanentka od 12.30</p>
       </td>
         <td >
-          <p>230,-Kč</p>
+          <p>260,-Kč</p>
         </td>
         <td >
-          <p>200,-Kč</p>
+          <p>220,-Kč</p>
         </td>
         <td >
-          <p>130,-Kč</p>
+          <p>170,-Kč</p>
         </td>
         <td >
-          <p>120,-Kč</p>
+          <p>150,-Kč</p>
         </td>
       </tr><tr><td class="first">
         <p>2 dny</p>
       </td>
         <td >
-          <p>580,-Kč</p>
+          <p>650,-Kč</p>
         </td>
         <td >
-          <p>490,-Kč</p>
+          <p>550,-Kč</p>
         </td>
         <td >
-          <p>580,-Kč</p>
+          <p>650,-Kč</p>
         </td>
         <td >
-          <p>490,-Kč</p>
+          <p>550,-Kč</p>
         </td>
       </tr><tr><td class="first">
         <p>3 dny</p>
       </td>
         <td >
-          <p>780,-Kč</p>
+          <p>850,-Kč</p>
         </td>
         <td >
-          <p>660,-Kč</p>
+          <p>750,-Kč</p>
         </td>
         <td >
-          <p>780,-Kč</p>
+          <p>850,-Kč</p>
         </td>
         <td >
-          <p>660,-Kč</p>
+          <p>750,-Kč</p>
         </td>
       </tr><tr><td class="first">
         <p>4/7 (4 dny ze 7)</p>
@@ -401,19 +401,19 @@
           <p>1100,-Kč</p>
         </td>
         <td >
-          <p>950,-Kč</p>
+          <p>1000,-Kč</p>
         </td>
         <td >
           <p>1100,-Kč</p>
         </td>
         <td >
-          <p>950,-Kč</p>
+          <p>1000,-Kč</p>
         </td>
       </tr><tr><td class="first">
         <p>Sezónní jízdné (nutné 1x foto)</p>
       </td>
         <td colspan="4">
-          <p>3800,-Kč</p>
+          <p>4600,-Kč, dětská 4300,-Kč</p>
         </td>
       </tr></tbody></table>
         <p class="btmspace-50" style="font-size: 0.8em;">Pozn. permanetka na Velkého Lucifera platí i na Malého Lucifera</p>
@@ -433,13 +433,13 @@
           <p>1 jízda</p>
         </td>
           <td>
-            <p>15,- Kč</p>
+            <p>20,- Kč</p>
           </td>
         </tr><tr><td>
           <p>10 jízd</p>
         </td>
           <td>
-            <p>130,- Kč</p>
+            <p>160,- Kč</p>
           </td>
         </tr>
 
@@ -447,25 +447,25 @@
         <p>Celodenní permanentka</p>
       </td>
         <td>
-          <p>220,-Kč</p>
+          <p>250,-Kč</p>
         </td>
       </tr><tr><td >
         <p>Zkrácená celodenní permanentka od 11 hod</p>
       </td>
         <td >
-          <p>190,-Kč</p>
+          <p>220,-Kč</p>
         </td>
       </tr><tr><td >
         <p>Dopolední permanentka do 12</p>
       </td>
         <td >
-          <p>140,-Kč</p>
+          <p>160,-Kč</p>
         </td>
       </tr><tr><td >
         <p>Odpolední permanentka od 12.30</p>
       </td>
         <td >
-          <p>140,-Kč</p>
+          <p>150,-Kč</p>
         </td>
       </tr></tbody></table>
 
@@ -484,25 +484,25 @@
         <p>60 bodů</p>
       </td>
         <td>
-          <p>120,-Kč</p>
+          <p>140,-Kč</p>
         </td>
       </tr><tr><td>
         <p>120 bodu</p>
       </td>
         <td>
-          <p>200,- Kč</p>
+          <p>240,- Kč</p>
         </td>
       </tr><tr><td>
         <p>180 bodů</p>
       </td>
         <td>
-          <p>280,- Kč</p>
+          <p>310,- Kč</p>
         </td>
       </tr><tr><td>
         <p>360 bodů</p>
       </td>
         <td>
-          <p>480,- Kč</p>
+          <p>520,- Kč</p>
         </td>
       </tr></tbody></table>
     </section>
