--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <td>Velký Lucifer</td><td>500m</td><td class="red-cell">Ne</td>
         </tr>
         <tr>
-          <td>Malý Lucifer</td><td>210m</td><td class="red-cell">Ne</td>
+          <td>Malý Lucifer</td><td>210m</td><td class="green-cell">Ano</td>
         </tr>
         <tr>
           <td>Dětský pás</td><td>35m</td><td class="red-cell">Ne</td>
