--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </tr>
         </thead>
         <tr>
-          <td>Velký Lucifer</td><td>500m</td><td class="red-cell">Ne</td>
+          <td>Velký Lucifer</td><td>500m</td><td class="green-cell">Ano</td>
         </tr>
         <tr>
           <td>Malý Lucifer</td><td>210m</td><td class="green-cell">Ano</td>
