změna jména roubenky

--- a/ubytovani/roubenka.html
+++ b/ubytovani/roubenka.html
@@ -68,10 +68,10 @@
     <!-- ################################################################################################ -->
       <section id="uvod" class="btmspace-50">
         <sectiontitle>
-          <h1 style="font-size: 2em;">Roubenka pod vlekem - Josefův Důl</h1>
+          <h1 style="font-size: 2em;">Roubenka u vleku - Josefův Důl</h1>
         </sectiontitle>
 
-        <p>Roubenka pod vlekem se nachází v malebné části obce Josefův Důl v Jizerských horách. V zimě oceníte její polohu přímo na sjezdovce Lucifer, v létě pak bezprostřední blízkost lesa, říčky Kamenice a turistických cest. V každém ročním období pak její odlehlost a zároveň výbornou dostupnost.</p>
+        <p>Roubenka u vleku se nachází v malebné části obce Josefův Důl v Jizerských horách. V zimě oceníte její polohu přímo na sjezdovce Lucifer, v létě pak bezprostřední blízkost lesa, říčky Kamenice a turistických cest. V každém ročním období pak její odlehlost a zároveň výbornou dostupnost.</p>
 
         <p>Útulně zařízený interiér nabízí dostatek soukromí i prostor pro společné posezení. K dispozici jsou tři ložnice /s 5,3,3 lůžky/, prostorná obytná kuchyň, kde je další dvoulůžko, 2 toalety, 1 koupelna, 1 sprchový kout. Kuchyň je vybavená dvouvařičem, MW, lednicí a nádobím. Na terase za chalupou je venkovní sezení a kamenný zahradní gril. V chatě se topí přímotopy, v kuchyni jsou navíc kamna na dřevo.</p>
 
