--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
         </tr>
         </thead>
         <tr>
-          <td>Velký Lucifer</td><td>500m</td><td class="green-cell">Ano</td>
+          <td>Velký Lucifer</td><td>500m</td><td class="red-cell">Ne</td>
         </tr>
         <tr>
-          <td>Malý Lucifer</td><td>110m</td><td class="green-cell">Ano</td>
+          <td>Malý Lucifer</td><td>110m</td><td class="red-cell">Ne</td>
         </tr>
         <tr>
-          <td>Dětský pás</td><td>35m</td><td class="green-cell">Ano</td>
+          <td>Dětský pás</td><td>35m</td><td class="red-cell">Ne</td>
         </tr>
         <tr>
           <td>Peklo</td><td>200m</td><td class="red-cell">Ne</td>
