--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -172,10 +172,10 @@
           <tr>
           <td>pes</td>
           <td><p>Jeden pes 170 Kč / noc</p>
-            <p>Druhý pes 220 Kč / noc</p>
+            <p>Druhý pes pouze po dohodě</p>
             </td>
           <td> <p>Jeden pes 170 Kč / noc</p>
-            <p>Druhý pes 220 Kč / noc</p>
+            <p>Druhý pes pouze po dohodě</p>
             </td>
         </tr>
         <tr>
