--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -46,7 +46,7 @@
 <!-- ################################################################################################ -->
 <div class="hoc clear hero-container">
   <div class="one_half first hero-image">
-    <img src="../images/niky.jpg" />
+    <img src="../images/20240612_174729.jpg" />
   </div>
   <div class="one_half hero-text ">
     <p>Krásná příroda Jizerských hor
@@ -200,10 +200,10 @@
       <ul class="nospace group overview">
         <li class="one_third">
           <figure>
-            <img src="../images/niky.jpg" alt="Penzion Niky">
+            <img src="../images/20240612_174729.jpg" alt="Penzion Niky">
             <figcaption>
               <h6 class="heading">Penzion Niky</h6>
-              <p>Penzion Niky pohled ze silnice</p>
+              <p>Penzion Niky</p>
             </figcaption>
           </figure>
         </li>
@@ -227,10 +227,19 @@
         </li>
         <li class="one_third">
           <figure>
-            <img src="../images/bazen.jpg" alt="Bazén">
+            <img src="../images/20240612_174858.jpg" alt="Bazén">
             <figcaption>
               <h6 class="heading">Bazén</h6>
-              <p>Vytápěný bazén po rekonstrukci plně uzaviratelný</p>
+              <p>Bazén plně uzaviratelný</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="one_third">
+          <figure>
+            <img src="../images/20240612_174819.jpg" alt="Dětské hřiště">
+            <figcaption>
+              <h6 class="heading">Dětské hřiště</h6>
+              <p>Přímo před penzionem</p>
             </figcaption>
           </figure>
         </li>
