--- a/ubytovani/penzion-niky.html
+++ b/ubytovani/penzion-niky.html
@@ -55,7 +55,7 @@
       <br><br>Nádherné výhledy
       <br>
       <div class="hero-cta">
-        Rezervujte přes <br><strong>ski_moravek@volny.cz</strong>
+        Rezervujte přes <br><strong>ski_moravek@volny.cz</strong> <br> nebo na <strong>+420 77 847 936</strong>
       </div>
 
     </p>
