--- a/ubytovani/roubenka.html
+++ b/ubytovani/roubenka.html
@@ -52,7 +52,7 @@
       <br><br>V klidném prostředí
       <br>
     <div class="hero-cta">
-      Rezervujte přes <br><strong>ski_moravek@volny.cz</strong>
+    Rezervujte přes <br><strong>ski_moravek@volny.cz</strong> <br> nebo na <strong>+420 77 847 936</strong>
     </div>
 
     </p>
