apartmany kubik a neli

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <ul>
             <li><a href="ubytovani/roubenka.html">Roubenka</a></li>
             <li><a href="ubytovani/penzion-niky.html">Penzion Niky</a></li>
+            <li><a href="ubytovani/kubik_neli.html">Apartmány Kubík a Neli</a></li>
           </ul>
         </li>
         <li><a href="#kudy-k-nam">Kudy k nám</a></li>
