--- a/ubytovani/kubik_neli.html
+++ b/ubytovani/kubik_neli.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
@@ -11,7 +12,7 @@
 
       gtag('config', 'UA-128548614-1');
   </script>
-<title>Penzion Niky - ubytování Josefův Důl</title>
+<title>Apartmány Kubík a Neli - ubytování Josefův Důl</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="last-modified" content="Thu, 19 May 2022 09:00:46 GMT" />
@@ -46,7 +47,7 @@
 <!-- ################################################################################################ -->
 <div class="hoc clear hero-container">
   <div class="one_half first hero-image">
-    <img src="../images/20240612_174729.jpg" />
+    <img src="../ubytovani/img/apartments/main.jpg" />
   </div>
   <div class="one_half hero-text ">
     <p>Krásná příroda Jizerských hor
@@ -72,45 +73,21 @@
     <!-- ################################################################################################ -->
       <section id="uvod" class="btmspace-50">
         <sectiontitle>
-          <h1 style="font-size: 2em;">Penzion Niky - Josefův důl</h1>
+          <h1 style="font-size: 2em;">Apartmány Kubík a Neli - Josefův důl</h1>
         </sectiontitle>
 
-      <p>Hledáte klid pro Vaši rodinnou dovolenou v Jizerských horách? Penzion Niky je tím správným místem.</p>
+      <p>Objevte kouzlo Jizerských hor a užijte si pohodovou dovolenou v srdci přírody!</p>
 
-        <p>Niky se nachází v Josefově Dole v Jizerských horách, 500 metrů od lyžařského areálu Lucifer.
+        <p>
+          Naše útulné ubytování je ideálním místem pro rodiny a všechny milovníky hor, klidu a outdoorových aktivit. Nacházíme se pouhých 500 metrů od lyžařského vleku, takže zimní radovánky máte na dosah ruky. V letní sezóně můžete vyrážet na krásné pěší a cyklistické trasy přímo od prahu našich dveří.
 
-          Studio zahrnuje posezení se satelitní TV, kuchyňský kout s jídelním stolem a koupelnu se sprchovým koutem.
+          Těšíme se, až Vám poskytneme nezapomenutelný zážitek plný pohodlí a dobrodružství v přírodě.
 
-          Lze si pronajmout jízdní kola a lyžařské vybavení. Niky má zahradu s krbem a venkovním posezením a dětským hřištěm.</p>
+        </p><p> Každý apartmán má v přízemí posezení se satelitní TV, kuchyňský kout s jídelním stolem a koupelnu se sprchovým koutem.
+
+          V patře poté dvě ložnice, každá s dvěmi lůžky. Parkování je možné přímo u ubytování. Venku je posezení a dětským hřištěm.</p>
       </section>
 
-      <section id="nabidka" class="btmspace-50">
-        <sectiontitle>
-          <h6>Nabízíme</h6>
-        </sectiontitle>
-
-      <table>
-        <thead>
-        <th></th>
-        <th>Čtyřlůžkový pokoj - Modrý</th>
-        <th>Čtyřlůžkový pokoj</th>
-        </thead>
-        <tr>
-          <th>Vlastní koupelna</th>
-          <td>Ano</td>
-          <td>Ano</td>
-        </tr>
-        <tr>
-          <th>Vlastní kuchyňka</th>
-          <td>Ano</td>
-          <td>Ano</td>
-        </tr>
-        <tr>
-          <th>Výhled</th>
-          <td>Ano</td>
-          <td>Ano</td>
-        </tr>
-      </table>
       <p>Parkování přímo u penzionu. Wifi zdarma.</p>
 
       <p>
@@ -144,49 +121,8 @@
           <h6>Ceník</h6>
         </sectiontitle>
 
-      <table>
-        <thead>
-        <th></th>
-        <th>Hlavní sezóna <br> <span>(prosinec, leden, únor, březen, červenec, srpen)</span>
-        </th>
-        <th>Vedlejší sezóna <br> <span>(duben, květen, červen, září, říjen, listopad)</span>
+        <p>Cena za apartmán na jednu noc je 2500 Kč.</p>
 
-        </th>
-
-        </thead>
-        <tr>
-          <td>dospělý</td>
-          <td>480 Kč / noc</td>
-          <td>420 Kč / noc</td>
-        </tr>
-        <tr>
-          <td>dítě do 15 let</td>
-          <td>350 Kč / noc</td>
-          <td>300 Kč / noc</td>
-        </tr>
-        <tr>
-          <td>dítě do 2,99 let</td>
-          <td>zdarma</td>
-          <td>zdarma</td>
-        </tr>
-          <tr>
-          <td>pes</td>
-          <td><p>Jeden pes 170 Kč / noc</p>
-            <p>Druhý pes pouze po dohodě</p>
-            </td>
-          <td> <p>Jeden pes 170 Kč / noc</p>
-            <p>Druhý pes pouze po dohodě</p>
-            </td>
-        </tr>
-        <tr>
-          <td>minimální cena za pokoj, rozumí se za 1 noc při vícedenním pobytu</td>
-          <td>850 Kč</td>
-          <td>750 Kč</td>
-        </tr>
-        <tr>
-          <td id="mapa">v případě 1 noci účtujeme přirážku 30% na osobu</td>
-        </tr>
-      </table>
       <small class="text-right">Ceny ubytování nezahrnují poplatek místnímu úřadu ve výši 25 Kč na
         dospělou osobu a den. Cena ubytování se může lišit v době Vánoc, přes Nový rok a během jarních prázdnin.
       </small>
@@ -200,46 +136,83 @@
       <ul class="nospace group overview">
         <li class="one_third">
           <figure>
-            <img src="../images/20240612_174729.jpg" alt="Penzion Niky">
+            <img src="../ubytovani/img/apartments/obyvak1.jpg" alt="Penzion Kubik obývací místnost">
             <figcaption>
-              <h6 class="heading">Penzion Niky</h6>
-              <p>Penzion Niky</p>
+              <h6 class="heading">Obývací místnost</h6>
+              <p>Obývací místnost s kuchyní</p>
             </figcaption>
           </figure>
         </li>
         <li class="one_third">
           <figure>
-            <img src="../images/cerveny.jpg" alt="Červený apartmán">
+            <img src="../ubytovani/img/apartments/obyvak2.jpg" alt="Apartmán Kubík obývací místnost">
             <figcaption>
-              <h6 class="heading">Červený apartmán</h6>
-              <p>Černý apartmán se čtyřmi lůžky</p>
+              <h6 class="heading">Obývací místnost</h6>
+              <p>Obývací místnost s kuchyní</p>
             </figcaption>
           </figure>
         </li>
         <li class="one_third">
           <figure>
-            <img src="../images/modry.jpg" alt="Modrý apartmán">
+            <img src="../ubytovani/img/apartments/obyvak3.jpg" alt="Apartmán Kubík obývací místnost">
             <figcaption>
-              <h6 class="heading">Modrý apartmán</h6>
-              <p>Modrý apartmán se čtyřmi lůžky</p>
+              <h6 class="heading">Obývací místnost</h6>
+              <p>Obývací místnost s kuchyní</p>
             </figcaption>
           </figure>
         </li>
         <li class="one_third">
           <figure>
-            <img src="../images/20240612_174858.jpg" alt="Bazén">
+            <img src="../ubytovani/img/apartments/kuchyn1.jpg" alt="Kuchyň">
             <figcaption>
-              <h6 class="heading">Bazén</h6>
-              <p>Bazén plně uzaviratelný</p>
+              <h6 class="heading">Kuchyň</h6>
+              <p>Plně vybavená kuchyň</p>
+            </figcaption>
+          </figure>
+        </li>
+
+        <li class="one_third">
+          <figure>
+            <img src="../ubytovani/img/apartments/loznice1.jpg" alt="Ložnice">
+            <figcaption>
+              <h6 class="heading">Ložnice</h6>
+              <p>Ložnice</p>
             </figcaption>
           </figure>
         </li>
         <li class="one_third">
           <figure>
-            <img src="../images/20240612_174819.jpg" alt="Dětské hřiště">
+            <img src="../ubytovani/img/apartments/loznice3.jpg" alt="Ložnice">
             <figcaption>
-              <h6 class="heading">Dětské hřiště</h6>
-              <p>Přímo před penzionem</p>
+              <h6 class="heading">Ložnice</h6>
+              <p>Ložnice</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="one_third">
+          <figure>
+            <img src="../ubytovani/img/apartments/chodba.jpg" alt="Zádveří">
+            <figcaption>
+              <h6 class="heading">Zádveří</h6>
+              <p>Zádveří</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="one_third">
+          <figure>
+            <img src="../ubytovani/img/apartments/koupelna1.jpg" alt="Koupelna">
+            <figcaption>
+              <h6 class="heading">Koupelna</h6>
+              <p>Koupelna se sprchovým koutem</p>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="one_third">
+          <figure>
+            <img src="../ubytovani/img/apartments/koupelna2.jpg" alt="Koupelna">
+            <figcaption>
+              <h6 class="heading">Koupelna</h6>
+              <p>Koupelna se sprchovým koutem</p>
             </figcaption>
           </figure>
         </li>
@@ -254,7 +227,7 @@
           <h6>Kudy k nám</h6>
         </sectiontitle>
         <div class="wrapper" style="text-align: center">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2522.3768480475037!2d15.219448115972591!3d50.787124270929084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1b1ee92d73353e39!2sNiky!5e0!3m2!1scs!2scz!4v1537162256353" width="700" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe style="border:none" src="https://frame.mapy.cz/s/hecacajeva" width="700" height="550" frameborder="0"></iframe>
         </div>
       </section>
       <!-- ################################################################################################ -->
