--- a/ubytovani/kubik_neli.html
+++ b/ubytovani/kubik_neli.html
@@ -25,7 +25,7 @@
 <div class="wrapper row1">
   <header id="header" class="hoc clear">
     <div id="logo" class="one_half first">
-      <h1><a href="../index.html"><img src="../images/penzion-niky-logo.png"  class="logo" alt="Logo Penzion Niky - Jizerské hory - Josefův Důl" /></a></h1>
+      <h1><a href="../index.html"><img src="../images/apartmany-logo.png"  class="logo" alt="Logo Apartmány Kubík a Neli - Jizerské hory - Josefův Důl" /></a></h1>
     </div>
     <div class="one_half">
       <nav id="mainav" class="hoc clear" style="color: #000000">
