--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@
         <li><a href="ubytovani/penzion-niky.html">Penzion Niky - ubytování</a></li>
         <li><a href="ubytovani/roubenka.html">Roubenka u vleku - ubytování</a></li>
         <li><a href="https://bowlingjosefuvdul.cz">Bowling - Josefův důl</a></li>
+        <li><a href="https://www.kudyznudy.cz/?utm_source=kzn&utm_medium=partneri_kzn&utm_campaign=banner" title="Kudyznudy.cz – tipy na výlet"> <img src="https://www.kudyznudy.cz/App_Themes/KzN/CSS/Images/svg/new-logo.svg" width="150"  height="33" border="0" alt="Kudyznudy.cz – tipy na výlet"> </a></li>
       </ul>
     </div>
 
@@ -660,7 +661,7 @@
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear">
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2018 - <a href="www.skilucifer.cz">Skilucifer.cz</a></p>
+    <p class="fl_left"> <a href="www.skilucifer.cz">Skilucifer.cz</a></p>
     <!-- ################################################################################################ -->
   </div>
 </div>
