kubik a neli na hlavni strance

--- a/index.html
+++ b/index.html
@@ -217,6 +217,15 @@
             <footer><a class="btn" href="ubytovani/roubenka.html">Web Roubenky</a></footer>
           </article>
         </li>
+
+        <li class="one_half first">
+          <article>
+            <img src="ubytovani/img/apartments/obyvak3.jpg" alt="Apartmány Neli a Kubík">
+            <h3 class="heading">Apartmány Neli a Kubík</h3>
+            <p>Dva nové apartmány s možností propojení od 2500,-Kč/den.</p>
+            <footer><a class="btn" href="ubytovani/kubik_neli.html">Web apartmány</a></footer>
+          </article>
+        </li>
       </ul>
 
     </section>
