--- a/ubytovani/kubik_neli.html
+++ b/ubytovani/kubik_neli.html
@@ -88,7 +88,7 @@
           V patře poté dvě ložnice, každá s dvěmi lůžky. Parkování je možné přímo u ubytování. Venku je posezení a dětským hřištěm.</p>
       </section>
 
-      <p>Parkování přímo u penzionu. Wifi zdarma.</p>
+      <p>Parkování přímo u penzionu.</p>
 
       <p>
         V létě je k dispozici</p>
