perla jizery webcam

--- a/index.html
+++ b/index.html
@@ -592,18 +592,7 @@
         <h2 class="heading">Webkamera</h2>
       </div>
       <div class="wrapper">
-        <link type="text/css" href="https://www.webcamlive.cz/stream/videojs5/video-js.min.css" rel="stylesheet" property='stylesheet' />
-        <video id="video_1"
-               class="video-js vjs-default-skin"
-               controls="controls"
-               preload="auto"
-               width="630"
-               height="525"
-               poster="https://webcamlive.cz/camera_image.php?idCamera=274"
-               data-setup='{"controls":true}'>
-          <source src="https://58fb4d0e87234.streamlock.net/rtplive/_definst_/cam274.stream/playlist.m3u8" type="application/x-mpegURL"/>
-        </video>
-        <script src="https://www.webcamlive.cz/stream/videojs5/video.min.js" ></script>
+       <img src="https://www.hotel-perla-jizery.cz/kamera.jpg" />
       </div>
     </section>
 
