--- a/index.html
+++ b/index.html
@@ -427,6 +427,33 @@
         </td>
       </tr></tbody></table>
         <p class="btmspace-50" style="font-size: 0.8em;">Pozn. permanetka na Velkého Lucifera platí i na Malého Lucifera</p>
+
+<h3>Dětský pás</h3>
+      <table border="1" cellspacing="0" cellpadding="0"  class="btmspace-50"><tbody>
+      <thead>
+      <tr><th>
+        <p><strong>Cena dopoledne</strong></p>
+      </th>
+        <th>
+          <p><strong>Cena odpoledne</strong></p>
+        </th>
+        <th>
+          <p><strong>Body</strong></p>
+        </th>
+      </tr>
+      </thead>
+        <tr><td>
+        <p>150,-Kč</p>
+      </td>
+        <td>
+          <p>150,-Kč</p>
+        </td>
+      </tr><tr><td>
+        <p>4 body</p>
+      </td>
+      </tr></tbody></table>
+
+      
        <h3>Peklo</h3>
       <table id="peklo-cenik" border="1" cellspacing="0" cellpadding="0"  class="btmspace-50"><tbody>
       <thead>
